--- a/server-manuspec/package.json
+++ b/server-manuspec/package.json
@@ -1,10 +1,10 @@
 {
   "name": "server-manuspec",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +13,9 @@
     "axios": "^1.6.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.18.3"
-  }
+    "express": "^4.19.1",
+    "knex": "^3.1.0",
+    "mysql2": "^3.9.2"
+  },
+  "description": ""
 }
