--- a/server-manuspec/package.json
+++ b/server-manuspec/package.json
@@ -1,10 +1,11 @@
 {
   "name": "server-manuspec",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node --watch server.js",
+    "nodemon": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -15,7 +16,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.1",
     "knex": "^3.1.0",
-    "mysql2": "^3.9.2"
+    "mysql2": "^3.9.2",
+    "nodemon": "^3.1.0"
   },
   "description": ""
 }
