--- a/server-manuspec/.env
+++ b/server-manuspec/.env
@@ -1,5 +1,5 @@
-PORT=5050;
-DB_HOST=127.0.0.1;
-DB_NAME=manuspec;
-DB_USER=root;
-DB_PASSWORD=rootroot;
+PORT=8080
+DB_HOST=127.0.0.1
+DB_NAME=manuspec
+DB_USER=root
+DB_PASSWORD=rootroot
